After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 711437 - apev2mux: should not put APEv2 tags at beginning of WavPack files
apev2mux: should not put APEv2 tags at beginning of WavPack files
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-good
git master
Other Linux
: Normal normal
: 1.4.5
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2013-11-04 19:29 UTC by David Bryant
Modified: 2014-12-12 16:44 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description David Bryant 2013-11-04 19:29:51 UTC
I have been testing Banshee 2.6.0-2linuxmint1 and found that WavPack files
created from CDs contain APEv2 tags at the beginning of the files. This is
counter to the WavPack specs and causes the files to be unplayable on players
that use FFmpeg (like VLC) and most other software (except Banshee). Players
that use libwavpack directly can play the files because it skips the tags, but
does not recognize the tag data at that location.

Please see section 4.0 of the WavPack format documentation at
http://www.wavpack.com/file_format.txt - here is an excerpt:

"Both the APEv2 tags and/or ID3v1 tags must come at the end of the
WavPack file, with the ID3v1 coming last if both are present."

I have also filed this bug against Banshee, but believe that it is using apev2mux to place the tags here, so am filing this against GStreamer as well.

Thanks!
Comment 1 Tim-Philipp Müller 2014-11-28 13:15:34 UTC
This should hopefully fix it:

commit 023a1637d941bfa22377c89287fb45edcaab4051
Author: Tim-Philipp Müller <tim@centricular.com>
Date:   Fri Nov 28 13:12:46 2014 +0000

    apev2mux: write APE tags at end for wavpack files
    
    http://www.wavpack.com/file_format.txt:
    "Both the APEv2 tags and/or ID3v1 tags must come at the end of the
    WavPack file, with the ID3v1 coming last if both are present."
    
    WavPack files that contain APEv2 tags at the beginning of the files
    are unplayable on players that use FFmpeg (like VLC) and most other
    software (except Banshee). Players that use libwavpack directly can
    play the files because it skips the tags, but does not recognize the
    tag data at that location.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=711437
Comment 2 Tim-Philipp Müller 2014-12-12 16:44:06 UTC
Cherry-picked into 1.4 branch.